--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Substrate funding service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www | pino-pretty",
+    "debug": "node --nolazy --inspect-brk=9229 ./bin/www",
+    "test": "standard"
   },
   "repository": {
     "type": "git",
