--- a/helm/tfchainactivationservice/values.yaml
+++ b/helm/tfchainactivationservice/values.yaml
@@ -1,4 +1,4 @@
-# Default values for substrate-funding-service.
+# Default values for tfchainactivationservice.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -8,7 +8,7 @@ image:
   repository: tfchainactivationservice
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  # tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -46,7 +46,7 @@ ingress:
   tls: []
 
 url: wss://tfchain.dev.threefold.io
-mnemonic: some words
+mnemonic:
 kyc_public_key: "somekey"
 
 resources: {}
