--- a/helm/tfchainactivationservice/templates/deployment.yaml
+++ b/helm/tfchainactivationservice/templates/deployment.yaml
@@ -36,6 +36,8 @@ spec:
             value: {{ .Values.mnemonic }}
           - name: KYC_PUBLIC_KEY
             value: {{ .Values.kyc_public_key }}
+          - name: ACTIVATION_AMOUNT
+            value: {{ .Values.activation_amount }}
           ports:
             - name: http
               containerPort: 3000
