--- a/helm/tfchainactivationservice/templates/deployment.yaml
+++ b/helm/tfchainactivationservice/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           - name: KYC_PUBLIC_KEY
             value: {{ .Values.kyc_public_key }}
           - name: ACTIVATION_AMOUNT
-            value: {{ .Values.activation_amount }}
+            value: {{ .Values.activation_amount | quote }}
           ports:
             - name: http
               containerPort: 3000
