--- a/helm/tfchainactivationservice/Chart.yaml
+++ b/helm/tfchainactivationservice/Chart.yaml
@@ -3,4 +3,4 @@ name: tfchainactivationservice
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.1
-appVersion: "1.16.1"
+appVersion: "v0.1.0-b1"
