--- a/helm/tfchainactivationservice/Chart.yaml
+++ b/helm/tfchainactivationservice/Chart.yaml
@@ -3,4 +3,4 @@ name: tfchainactivationservice
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.2
-appVersion: "0.1.0-b7"
+appVersion: "1.0.0"
