--- a/helm/tfchainactivationservice/Chart.yaml
+++ b/helm/tfchainactivationservice/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: tfchainactivationservice
-description: A Helm chart for Kubernetes
+description: TFchain account activation funding service
 type: application
-version: 0.1.2
-appVersion: "1.0.1"
+version: 0.1.3
+appVersion: "1.0.2"
