--- a/helm/tfchainactivationservice/values.yaml
+++ b/helm/tfchainactivationservice/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: tfchainactivationservice
+  repository: ghcr.io/threefoldtech/tfchain_activation_service
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   # tag: "latest"
@@ -16,10 +16,12 @@ fullnameOverride: ""
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -41,7 +43,7 @@ ingress:
     kubernetes.io/ingress.class: nginx
   hosts:
     - host:
-      paths: 
+      paths:
         - /
   tls: []
 
@@ -50,7 +52,8 @@ mnemonic:
 kyc_public_key: "somekey"
 activation_amount: 1
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -69,4 +72,4 @@ tolerations: []
 affinity: {}
 
 threefoldVdc:
-  backup: ''
+  backup: ""
