--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./bin/www | pino-pretty",
+    "start-prod": "node ./bin/www",
     "debug": "node --nolazy --inspect-brk=9229 ./bin/www",
     "test": "standard"
   },
